--- a/index.html
+++ b/index.html
@@ -1,25 +1,34 @@
-<!Doctype html>
-<html lang='en'>
-<head>
-  <meta charset='UTF-8'>
-  <meta name='viewport'
-        content='width=device-width, initial-scale=1.0'>
-  <meta http-equiv='X-UA-Compatible' content='ie=edge'>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="styles/style.css">
-  <title>Document</title>
-</head>
-<body>
-<main>
-  <section class ='section'>
-    <form class ="form" action="" method="get">
-      <input class='searchInput' type="text" name="complete-list" list=""
-             id="searchLine"
-             autocomplete='off' value=''>
-    </form>
-  </section>
-  <div class="container" id="app"></div>
-</main>
-<script type='module' src="./scripts/app.js" type='module'></script>
-</body>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="styles/style.css" />
+    <title>Document</title>
+  </head>
+  <body>
+    <main>
+      <section class="section">
+        <form class="form" action="" method="get">
+          <input
+            class="searchInput"
+            type="text"
+            name="complete-list"
+            list=""
+            id="searchLine"
+            autocomplete="off"
+            value=""
+          />
+          <label for="searchLine"></label>
+        </form>
+      </section>
+      <div class="container" id="app"></div>
+    </main>
+    <script type="module" src="./scripts/app.js" type="module"></script>
+  </body>
 </html>
