--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <body>
     <main>
       <section class="section">
+        <label for="searchLine"></label>
         <form class="form" action="" method="get">
           <input
             class="searchInput"
@@ -23,8 +24,8 @@
             id="searchLine"
             autocomplete="off"
             value=""
+            tabindex="1"
           />
-          <label for="searchLine"></label>
         </form>
       </section>
       <div class="container" id="app"></div>
