--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
   <body>
     <main>
       <section class="section">
-        <label for="searchLine"></label>
         <form class="form" action="" method="get">
+          <label for="searchLine"></label>
           <input
             class="searchInput"
             type="text"
@@ -27,6 +27,7 @@
             tabindex="1"
           />
         </form>
+        <div class="repos-list"></div>
       </section>
     </main>
     <script type="module" src="./scripts/app.js" type="module"></script>
